--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/assets/webp-transparent(3000by3000).webp" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My App</title>
+        <title>MADS CONSULTING GROUP LLC</title>
     </head>
     <body>
         <div id="root"></div>
